# xboxdashboard

./: .gitignore  CMakeLists.txt  README.md
docs/: xbe_analysis.md
src/: CMakeLists.txt  main.c
src/recomp/: recomp_dispatch.h  recomp_manual.c  recomp_stubs.c
tools/: extract_fatx.py  extract_hdd.py
